# PF-G1-Back-Django

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  arquitectura-microservicios.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_is_active_and_more.py  0003_user_system_admin_permission.py
config/: settings.py  urls.py
demo/: seed.py  urls.py  views.py
demo/migrations/: 0001_seed_demo.py  0002_sync_demo_groups.py  0003_sync_system_admin.py
health/: urls.py  views.py
plannings/: admin.py  apps.py  auditlog.py  models.py  preflight.py  scheduler_payload.py  serializers.py  urls.py  views.py
plannings/migrations/: 0001_initial.py  0002_planning_permissions.py  0003_planningauditevent.py  0004_planning_rejected_at_planning_rejected_by_and_more.py
reports/: urls.py  views.py
surgeries/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
surgeries/migrations/: 0001_initial.py  0002_alter_intervention_options.py
tests/: test_api.py
